--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.4",
     "grunt-mocha-test": "^0.12.7",
+    "grunt-wiredep": "^2.0.0",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
