--- a/package.json
+++ b/package.json
@@ -28,9 +28,17 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "grunt": "^0.4.5",
+    "grunt-angular-templates": "^1.0.3",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.4",
+    "grunt-injector": "^0.6.1",
     "grunt-mocha-test": "^0.12.7",
+    "grunt-sass": "^1.1.0",
+    "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^2.0.0",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3",
