--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.4",
     "grunt-injector": "^0.6.1",
+    "grunt-karma": "^0.12.1",
     "grunt-mocha-test": "^0.12.7",
     "grunt-sass": "^1.1.0",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.7",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
