--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Trolly Tracker",
+  "name": "trolly-tracker",
   "version": "1.0.0",
   "description": "Manage city trolly data",
   "main": "server.js",
