--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "NODE_ENV=test mocha --reporter spec server/tests/*.spec.js"
+    "test": "NODE_ENV=test mocha --reporter spec server/tests/*.spec.js",
+    // @link http://xseignard.github.io/2013/02/18/use-bower-with-heroku/
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/adam-s/trolly-tracker#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "bower": "^1.7.7",
     "compression": "^1.6.1",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
