--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bower": "^1.7.7",
     "compression": "^1.6.1",
     "express": "^4.13.4",
+    "lodash": "^4.6.1",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.3",
     "morgan": "^1.6.1"
